@@ -4,6 +4,7 @@ import lombok.RequiredArgsConstructor;
 import ma.tr.docnearme.modules.user.UserRepository;
 import ma.tr.docnearme.security.jwt.JwtService;
 import ma.tr.docnearme.security.jwt.JwtServiceImpl;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -38,6 +39,10 @@ public class SecurityConfiguration {
     JwtService jwtService() {
         return new JwtServiceImpl();
     }
+
+    @Value("${ALLOWED_ORIGINS:http://localhost:5173,http://localhost:4200,http://localhost:3000}")
+    private String allowedOrigins;
+
 
     @Bean
     UserDetailsService userDetailsService() {
@@ -99,7 +104,8 @@ public class SecurityConfiguration {
     public CorsConfigurationSource corsConfigurationSource() {
 
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:4200","http://localhost:3000/"));
+        String[] origins = allowedOrigins.split(",");
+        configuration.setAllowedOrigins(Arrays.asList(origins));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
         configuration.setAllowedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Authorization", "x-xsrf-token"));
         configuration.setAllowCredentials(true);
